--- a/shoppingsite/src/components/Navbar/Navbar.css
+++ b/shoppingsite/src/components/Navbar/Navbar.css
@@ -6,6 +6,17 @@
     width: 100%;
 }
 
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+}
+
+.logo img {
+    width: 141px;
+}
+
 .search_container {
     display: flex;
     align-items: center;
@@ -47,9 +58,10 @@
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
-    line-height: 16px; /* 100% */
+    line-height: 16px;
     letter-spacing: 0.32px;
     text-transform: capitalize;
+    cursor: pointer;
 }
 
 .cart_container {
@@ -59,6 +71,7 @@
 }
 
 .cart_icon {
+    position: relative;
     width: 56px;
     height: 56px;
     border-radius: 8px;
@@ -66,7 +79,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    cursor: pointer;
 }
 
 .badges {
@@ -89,8 +102,8 @@
     line-height: var(--Label-Small-Line-Height, 16px);
     letter-spacing: var(--Label-Small-Tracking, 0.5px);
     position: absolute;
-    right: 12.5rem;
-    top: 1.2rem;
+    left: 2.7rem;
+    top: -0.5rem;
 }
 
 .cart_desc p {
