--- a/shoppingsite/src/components/CartPage/CartPage.css
+++ b/shoppingsite/src/components/CartPage/CartPage.css
@@ -174,3 +174,63 @@
 .other_buttons svg {
     cursor: pointer;
 }
+
+.other_desc_wrapper {
+    display: flex;
+    width: 1140px;
+    padding: 20px 0px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.other_desc {
+    display: flex;
+    padding: 24px 0px;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
+    border-top: 1px solid var(--Boulder-100, #E7E7E7);
+}
+
+.desc_header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+    padding: 10px;
+    border-bottom: 2px solid transparent;
+}
+
+.desc_header.active {
+    border-bottom-color: var(--White-700, #525252); 
+}
+
+.desc_header h1 {
+    color: var(--Boulder-700, #4F4F4F);
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 32px;
+    letter-spacing: 0.4px;
+    text-transform: capitalize;
+}
+
+.section_text_wrapper {
+    display: flex;
+    padding: 8px;
+    align-items: center;
+    align-self: stretch;
+}
+
+.section_text_wrapper p {
+    color: var(--Boulder-500, #757575);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 28px;
+    letter-spacing: 0.4px;
+    text-transform: capitalize;
+    list-style-type: decimal;
+}
